fixed alignment issues added  button and form

--- a/style.css
+++ b/style.css
@@ -1,27 +1,94 @@
-
 li {
   display: inline;
-  font-size: larger;
+
+}
+a {
+  text-decoration: none;
+  color: white;
   
 }
-a {  text-decoration: none;
-     color: white;
-     }
-.menu  {
-    float:inline;
-    list-style-type:none;
-    text-align: center;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    background-color: #335D67;
-   
+
+nav a:hover {
+  color:palevioletred;
+}
+/*home page css*/ 
+.introhome {
+  margin: auto;
+  text-align: center;
+  padding-top: 20px;
+}
+
+.homepic {
+width: 900px;
+margin:auto; /* not centering*/
+}
+
+button {
+color: white;
+background: #335d67;
+  padding: 15px 300px;
+  border-radius: 50px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+}
+ 
+
+.menu {
+  list-style-type: none;
+  text-align: center;
+  background-color: #335d67;
+  padding: 0.125em;
+  font-size: 30px;
+
 }
 #textlogo {
-    align-items: center;
+  align-items: center;
 }
-.center {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
+
+
+.card {
+  width: 200px;
+  border: solid 2px; 
+  padding: 3px;
+  
+ 
+  
+}
+
+
+
+.serviceimg {
+  width: 200px;
+  
+  
+
+}
+
+
+.services {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  flex-wrap: initial;
+  align-items: center;
+  align-content: space-around;
+
+}
+
+.alignment {
+  Margin: auto; 
+  padding-left: 40px;
+  padding-right: 40px;
+  text-align: center;
+}
+
+footer 
+{ color: aliceblue;
+  background-color: #335d67;
+  padding: 0.125em;
+  font-size: 20px;
 }
